wait for pending commands instead of empty queue + rebuild

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-.vscode/tasks.json
-.vscode/settings.json
-.vscode/launch.json
-.vscode/c_cpp_properties.json
+.vscode/*
 sleep-and-print.sh
 file.txt
 mock_init.c
